--- a/src/app/components/pages/production-audiovisuelle/production-audiovisuelle.component.scss
+++ b/src/app/components/pages/production-audiovisuelle/production-audiovisuelle.component.scss
@@ -114,13 +114,14 @@
     height: 520px;
     width: 100%;
     background-color:  rgb(17, 16, 16);
-
+    
     .page-title-content{
         margin-top: 30%;
     }
 
     
     h2{
+        position: absolute;
         color: #f1f2f6;
         margin-top: 50px;
         font-weight: 700;
@@ -128,13 +129,27 @@
        text-align: center;
     }
     p{
+        position: absolute;
         font-size: 22.5px;
-        margin-top: 5%;
+        margin-top: 100px;
         //margin-left: 95px;
         text-align: center;
         color: rgb(221, 217, 217);
     }
 }
+.video-foreground {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 620px;
+  }
+  
+  .video-foreground iframe {
+    width: 100%;
+    height: 100%;
+    pointer-events: none;
+  }
 .container-fluid::before{
     background-color: transparent;
 }
@@ -143,7 +158,7 @@
 }
 .courses-details-image {
     border-radius: 5px;
-
+   
     iframe {
         width: 100%;
         border-radius: 5px;
@@ -151,7 +166,7 @@
 }
 .courses-details-desc1 {
     margin-left: 0%;
-    margin-top: 200px;
+    margin-top: 30px;
     width: 60%;
     display: inline-block;
     h3 {
@@ -183,7 +198,7 @@
 }
 .courses-details-desc2{
     margin-left: 0%;
-    margin-top: 50px;
+    margin-top: 10px;
     width: 50%;
     display: inline-block;
     h3 {
