--- a/src/app/components/pages/production-audiovisuelle/production-audiovisuelle.component.html
+++ b/src/app/components/pages/production-audiovisuelle/production-audiovisuelle.component.html
@@ -9,7 +9,13 @@
                             <li><a href="courses-2-columns-style-1.html">Production Audiovisuelle</a></li>
                         </ul>
                     </div> -->
-                <h2>AGENCE DE PRODUCTION AUDIOVISUELLE</h2>
+                    
+                    <div id="video-background">
+                        <div class="video-foreground">
+                            <iframe width="560" height="315" src="https://www.youtube.com/embed/6PXAXB-a_Zs?playlist=6PXAXB-a_Zs&loop=1&autoplay=1&controls=0&mute=1" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                        </div>
+                    </div>
+                    <h2>AGENCE DE PRODUCTION AUDIOVISUELLE</h2>
                 <p><strong>IBComProd</strong> experte dans la médiatisation télévisuelle, radiophonique ou encore à travers le web ou les canaux classiques.</p>
             </div>
         </div>
@@ -41,7 +47,7 @@
                         </div>
                     </div>
                 </div> -->
-                <div class="row" style="overflow-x:none; margin-top: -500px;" >
+                <div class="row" style=" margin-top: 100px;" >
                     <div class="col-lg-8">
                         <div class="courses-details-image text-center">
                             <iframe width="560" height="315" src="https://www.youtube.com/embed/z8i3w_8xsKo" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
