--- a/src/app/components/pages/relations-presse-et-publiques/relations-presse-et-publiques.component.html
+++ b/src/app/components/pages/relations-presse-et-publiques/relations-presse-et-publiques.component.html
@@ -9,6 +9,12 @@
 
                     </ul>
                 </div> -->
+            <div id="video-background">
+                    <div class="video-foreground">
+                        
+                        <iframe width="560" height="315" src="https://www.youtube.com/embed/7Nmmf8ktXcM?playlist=7Nmmf8ktXcM&loop=1&autoplay=1&controls=0&mute=1" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                    </div>
+            </div>
             <h2>AGENCE DE RELATIONS PRESSE TUNISIE</h2>
             <p><strong>IBComProd</strong> vous offre une expertise dans les domaines majeurs de la communication</p>
         
