--- a/src/app/components/pages/événementiel/événementiel.component.html
+++ b/src/app/components/pages/événementiel/événementiel.component.html
@@ -11,7 +11,12 @@
                     </ul>
 
                 </div> -->
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/xoPT1eayq6E?autoplay=1&controls=0&mute=1" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                <div id="video-background">
+                    <div class="video-foreground">
+                        <iframe width="560" height="315" src="https://www.youtube.com/embed/xoPT1eayq6E?autoplay=1&controls=0&mute=1&playlist=xoPT1eayq6E&loop=1" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                    </div>
+                </div>
+               
                 <h2>AGENCE ÉVÉNEMENTIELLE TUNISIE</h2>
                 
                 <p><strong>IBComProd</strong> spécialiste dans la création d’événements qui reflètent le goût de chaque client..</p>
