--- a/src/app/components/pages/événementiel/événementiel.component.scss
+++ b/src/app/components/pages/événementiel/événementiel.component.scss
@@ -155,7 +155,19 @@
     margin-top: -7%;
     font-weight: bold;
 }
-
+.video-foreground {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 630px;
+  }
+  
+  .video-foreground iframe {
+    width: 100%;
+    height: 100%;
+    pointer-events: none;
+  }
 
 @import url('https://fonts.googleapis.com/css?family=Mukta:700');
 
