--- a/src/app/components/pages/marketing-digital/marketing-digital.component.html
+++ b/src/app/components/pages/marketing-digital/marketing-digital.component.html
@@ -9,7 +9,11 @@
                     <li><a href="courses-2-columns-style-1.html">Marketing Digital</a></li>
                 </ul>
             </div> -->
-
+            <div id="video-background">
+                <div class="video-foreground">
+                    <iframe width="560" height="315" src="https://www.youtube.com/embed/Ii3A-Dmyngw?playlist=Ii3A-Dmyngw&loop=1&autoplay=1&controls=0&mute=1" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                </div>
+            </div>
             <h2>AGENCE DE MARKETING DIGITAL</h2>
             <p><strong>IBComProd</strong> accompagne les marques dans la création et la mise en place de leurs stratégies de communication digitale et de visibilité en ligne.</p>
 
