--- a/src/app/components/pages/home-page-one/homeone-main-banner/homeone-main-banner.component.html
+++ b/src/app/components/pages/home-page-one/homeone-main-banner/homeone-main-banner.component.html
@@ -5,7 +5,7 @@
      
         <div id="video-background">
             <div class="video-foreground">
-                <iframe src="https://www.youtube.com/embed/sc8T7k6MQ8U?autoplay=1&controls=0&playlist=sc8T7k6MQ8U&loop=1" title="YouTube video player" frameborder="0" allowfullscreen ></iframe>
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/sc8T7k6MQ8U?autoplay=1&controls=0&playlist=sc8T7k6MQ8U&loop=1" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" frameborder="0" allowfullscreen ></iframe>
             </div>
         </div>
         <div class="head">
