--- a/src/app/components/pages/home-page-one/home-page-one.component.scss
+++ b/src/app/components/pages/home-page-one/home-page-one.component.scss
@@ -38,16 +38,18 @@
 }
 
 .about{
+  
   margin-top: -750px;
 }
 
 .clients{
+  width: 93%;
   h3{
     margin-left: 0%;
   }
  margin-top: 80px;
   height: 50%;
-  margin-left: 90px;
+  margin-left: 50px;
   margin-bottom: 100px;
 }
 
