--- a/src/app/components/pages/home-page-one/home-page-one.component.html
+++ b/src/app/components/pages/home-page-one/home-page-one.component.html
@@ -1,49 +1,15 @@
-<div class="head">
+<!-- <div class="head">
     <app-header-style></app-header-style>
-</div>
+</div> -->
 
-<div class="mobileMenu">
-    <input type='checkbox' id='mmeennuu'>
-    <label class='menu' for='mmeennuu'>
 
-    <div class='barry'>
-        <span class='bar'></span>
-        <span class='bar'></span>
-        <span class='bar'></span>
-        <span class='bar'></span>
-        <span class='bar'></span>
-    </div>
-	
-    <ul>
-        <li><a id='home' href='/'>Acceuil</a></li>
-        <div class="btn-group">
-            <button type="button" class="btn dropdown-toggle dropdown-toggle-split" data-bs-toggle="dropdown" aria-expanded="false">
-                Nos Services
-                <span class="visually-hidden">Toggle Dropdown</span>
-            </button>
-            <ul class="dropdown-menu">
-                <li><a class="dropdown-item" href="/relations-presse-et-publiques">Relations Presse et Publiques</a></li>
-                <li><a class="dropdown-item" href="/production-audiovisuelle">Production Audiovisuelle</a></li>
-                <li><a class="dropdown-item" href="/marketing-digital">Marketing Digital</a></li>
-                <li><a class="dropdown-item" href="/événementiel">ÉVÉNEMENTIEL</a></li>
-                <li><a class="dropdown-item" href="/développement-web">Développement Web</a></li>
-                <li><a class="dropdown-item" href="/design-graphique">Design Graphique</a></li>
-            </ul>
-        </div>
-        <!-- <li><a id='about' href='#about'>Nos Services</a></li> -->
-        <li><a id='contact' href='/nos-clients'>Nos Clients</a></li>
-        <li><a id='link' href='/blog-style-2'>Blog</a></li>
-        <li><a id='link' href='/contact'>Contact</a></li>
-    </ul>
-
-    </label>
-</div>
 
 <div style="overflow-x: hidden;">
+
     <div id="banner">
         <app-homeone-main-banner></app-homeone-main-banner>
     </div>
-</div>
+
     <!-- <a class="scrollUp" href="/événementiel">
         <img src="../../../../assets/img/icons/up.png"/>
     </a> -->
@@ -80,6 +46,7 @@
     <div id="map">
         <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3193.206430339298!2d10.200958614358164!3d36.83753187329892!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x12fd4b88474e068d%3A0x2917380f565f81c6!2sIBComProd!5e0!3m2!1sfr!2stn!4v1657899541034!5m2!1sfr!2stn" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
     </div>
-    
+
     <app-footer></app-footer>
 
+</div>
