--- a/src/app/components/pages/développement-web/développement-web.component.scss
+++ b/src/app/components/pages/développement-web/développement-web.component.scss
@@ -116,6 +116,7 @@
     width: 100%;
     background-color:  rgb(17, 16, 16);
     h2{
+        position:absolute;
         color: #f1f2f6;
         margin-top: 50px;
         font-weight: 700;
@@ -123,8 +124,9 @@
        text-align: center;
     }
     p{
+        position:absolute;
         font-size: 22.5px;
-        margin-top: 5%;
+        margin-top: 100px;
         //margin-left: 95px;
         text-align: center;
         color: rgb(221, 217, 217);
@@ -133,13 +135,27 @@
         margin-top: 30%;
     }
 }
+.video-foreground {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 600px;
+  }
+  
+  .video-foreground iframe {
+    width: 100%;
+    height: 100%;
+    pointer-events: none;
+  }
+
 .courses-details-image {
     border-radius: 5px;
-
+    margin-top: 500px;
     iframe {
         width: 100%;
         border-radius: 5px;
-        margin-top: -50px;
+        //margin-top: -50px;
     }
 }
 .courses-details-desc1 {
@@ -282,7 +298,7 @@
 }
 .courses-sidebar-information {
     margin-bottom: 35px;
-   margin-top: -20px;
+   margin-top: 550px;
     ul {
         padding-left: 0;
         margin-bottom: 0;
