--- a/src/app/components/pages/développement-web/développement-web.component.html
+++ b/src/app/components/pages/développement-web/développement-web.component.html
@@ -10,9 +10,15 @@
                 </ul>
             </div> -->
 
+            <div id="video-background">
+                <div class="video-foreground">
+                    <iframe width="560" height="315" src="https://www.youtube.com/embed/iFoNg1LrdQg?playlist=iFoNg1LrdQg&loop=1&autoplay=1&controls=0&mute=1" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                </div>
+            </div>
+            <!-- ?playlist=6PXAXB-a_Zs&loop=1&autoplay=1&controls=0&mute=1 -->
             <h2>AGENCE DÉVELOPPEMENT WEB TUNISIE</h2>
                     
-            <p><strong>IBComProd</strong> spécialiste dans la création des sites web vitrines, e-commerce ou dynamique, un développement sur mesure..</p>
+            <p><strong>IBComProd</strong> spécialiste dans la création des sites web vitrines, e-commerce ou dynamique, <br> un développement sur mesure..</p>
 
         </div>
     </div>
