--- a/src/app/components/pages/design-graphique/design-graphique.component.html
+++ b/src/app/components/pages/design-graphique/design-graphique.component.html
@@ -1,6 +1,6 @@
 <app-header-style></app-header-style>
 
-<div style="background-color:  rgb(17, 16, 16);">
+<div style="background-color: black">
     <div class="page-title-area jarallax" data-jarallax='{"speed": 0.3}'>
         <div class="container">
             <!-- <div class="page-title-content">
@@ -10,6 +10,12 @@
 
                 </ul>
             </div> -->
+            
+            <div id="video-background">
+                <div class="video-foreground">
+                    <iframe src="https://www.youtube.com/embed/eoEbzpO7X5M?zommIplaylist=eoEbzpO7X5M&loop=1&autoplay=1&controls=0&mute=1" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                </div>
+            </div>
 
             <h2>AGENCE DESIGN GRAPHIQUE TUNISIE</h2>
                     
@@ -91,7 +97,7 @@
                 </div>
 
                 <div class="courses-details-images">
-                            <img src="../../../../assets/img/dg.jpg"  class="image">
+                    <img src="../../../../assets/img/dg.jpg"  class="image">
                 </div>
 
                 <div class="courses-details-desc2">
