--- a/src/app/components/pages/relations-presse-et-publiques/relations-presse-et-publiques.component.html
+++ b/src/app/components/pages/relations-presse-et-publiques/relations-presse-et-publiques.component.html
@@ -1,5 +1,5 @@
 <app-header-style></app-header-style>
-<div style="background-color: rgb(17, 16, 16);">
+<div style="background-color: black">
     <div class="page-title-area" data-jarallax='{"speed": 0.3}'>
         <div class="container" id="scroll">
             <!-- <div class="page-title-content">
@@ -10,14 +10,12 @@
                     </ul>
                 </div> -->
             <div id="video-background">
-                    <div class="video-foreground">
-                        
-                        <iframe width="560" height="315" src="https://www.youtube.com/embed/7Nmmf8ktXcM?playlist=7Nmmf8ktXcM&loop=1&autoplay=1&controls=0&mute=1" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-                    </div>
+                <div class="video-foreground">                     
+                    <iframe src="https://www.youtube.com/embed/7Nmmf8ktXcM/?playlist=7Nmmf8ktXcM&loop=1&autoplay=1&controls=0&mute=1" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                </div>
             </div>
             <h2>AGENCE DE RELATIONS PRESSE TUNISIE</h2>
-            <p><strong>IBComProd</strong> vous offre une expertise dans les domaines majeurs de la communication</p>
-        
+            <p><strong>IBComProd</strong> vous offre une expertise dans les domaines majeurs de la communication</p>      
         </div>
     </div>
 
@@ -180,9 +178,8 @@
     <section class="contact-area pb-100">
         <div class="container">
             <div class="section-title">
-                    <span class="sub-title"><strong>Demande de devis</strong></span>
-                    <h4 style="color: aliceblue;">Maintenant parlons de votre projet !</h4>
-
+                <span class="sub-title"><strong>Demande de devis</strong></span>
+                <h4 style="color: aliceblue;">Maintenant parlons de votre projet !</h4>
             </div>
 
             <div class="contact-form">
