--- a/src/app/components/pages/événementiel/événementiel.component.html
+++ b/src/app/components/pages/événementiel/événementiel.component.html
@@ -1,6 +1,6 @@
 
 <app-header-style></app-header-style>
-<div style="background-color: rgb(17, 16, 16);">
+<div style="background-color:black;">
         <div class="page-title-area  jarallax" data-jarallax='{"speed": 0.3}'>
             <div class="container">
                 <!-- <div class="page-title-content">
@@ -13,7 +13,7 @@
                 </div> -->
                 <div id="video-background">
                     <div class="video-foreground">
-                        <iframe width="560" height="315" src="https://www.youtube.com/embed/xoPT1eayq6E?autoplay=1&controls=0&mute=1&playlist=xoPT1eayq6E&loop=1" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                        <iframe src="https://www.youtube.com/embed/xoPT1eayq6E?autoplay=1&controls=0&mute=1&playlist=xoPT1eayq6E&loop=1" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
                     </div>
                 </div>
                
