--- a/src/app/components/pages/événementiel/événementiel.component.scss
+++ b/src/app/components/pages/événementiel/événementiel.component.scss
@@ -111,15 +111,15 @@
 .page-title-area{
    // background-image: url(../../../../assets/img/bg/event2.jpg);
     background-size: 100% 550px;
-    height: 520px;
+    height: 615px;
     width: 100%;
     background-color:  rgb(17, 16, 16);
-    
+    overflow: hidden;
 
     h2{
         position: absolute;
         color: #f1f2f6;
-        margin-top: 50px;
+        margin-top: 300px;
         font-weight: 700;
        // font-size: 50px;
        text-align: center;
@@ -127,7 +127,7 @@
     p{
         position: absolute;
         font-size: 22.5px;
-        margin-top: 7.5%;
+        margin-top: 350px;
         //margin-left: 95px;
         text-align: center;
         color: rgb(221, 217, 217);
@@ -160,7 +160,8 @@
     top: 0;
     left: 0;
     width: 100%;
-    height: 630px;
+    height: 430px;
+    scale: 2;
   }
   
   .video-foreground iframe {
@@ -286,7 +287,7 @@ button {
   }
 }
 .courses-details-area{
-    margin-top: 38%;
+    margin-top: 420px;
 }
 .courses-details-image {
     border-radius: 5px;
@@ -313,8 +314,8 @@ button {
             margin-top: 30px;
         }
     }
-    
     p {    
+        font-size: 16px;
         color: #999595;
         strong {
             color: rgb(255, 255, 255);
@@ -335,6 +336,13 @@ button {
             margin-top: 30px;
         }
     }
+    p{
+        font-size: 16px;
+        color: #999595;
+        strong{
+            color: rgb(255, 255, 255);
+        }
+    }
     color:#999595;
     margin-top: 100px;
     margin-left: 50%;
@@ -347,11 +355,10 @@ button {
         width: 100%;
     }
 }
-    strong{
-        color: rgb(255, 255, 255);
-    }
+   
     
 }
+
 .courses-details-images1{
     height: 100%;
     width: 50%;
@@ -365,7 +372,7 @@ button {
 .courses-details-images{
     
     width: 45%;
-    margin-top: 0px;
+  
     margin-left: 750px;
     display: inline-block;
     img{
@@ -375,11 +382,11 @@ button {
     }
     Img{
         height: 350px;
-
+        margin-top: -2150px;
     }
     .gt{
         height: 500px;
-        margin-top: -800px;
+        margin-top: -900px;
         margin-left: -1250px;
         
     }
@@ -388,7 +395,9 @@ button {
     margin-top: 3%;
     margin-left: 51.5%;
     ul{
+        
         span{
+            font-size:16px ;
             color: white;
         }
     }
@@ -1349,7 +1358,7 @@ button {
     width: 100%;
     display: inline-block;
     margin-left: 0px;
-    margin-top: -70px;
+    margin-top: -100px;
 
         @import url('https://fonts.googleapis.com/css?family=Poppins:400,500,600,700,800,900');
 
