--- a/src/app/components/pages/relations-presse-et-publiques/relations-presse-et-publiques.component.scss
+++ b/src/app/components/pages/relations-presse-et-publiques/relations-presse-et-publiques.component.scss
@@ -112,9 +112,10 @@
     }
 }
 .page-title-area{
+    overflow: hidden;
     //background-image: url(../../../../assets/img/bg/rp.jpg);
     background-size: 100% 100%;
-    height: 520px;
+    height: 620px;
     width: 100%;
     background-color:  rgb(17, 16, 16);
 
@@ -122,25 +123,38 @@
         margin-top: 30%;
     }
 
-    
     h2{
         position: absolute;
         color: #f1f2f6;
-        margin-top: 50px;
+        margin-top: 300px;
+        
         font-weight: 700;
        // font-size: 50px;
        text-align: center;
     }
     p{
         position: absolute;
-        font-size: 22.5px;
-        margin-top: 100px;
+        font-size: 20.5px;
+        margin-top: 350px;
+       
         //margin-left: 95px;
         text-align: center;
         color: rgb(221, 217, 217);
-    }
-
-    
+    } 
+}
+.video-foreground {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 500px;
+    scale: 2;
+} 
+.video-foreground iframe {
+    width: 100%;
+    height: 100%;
+    pointer-events: none;
+    background-color: cover;
 }
 .courses-details-image {
     border-radius: 5px;
@@ -528,19 +542,6 @@
     margin-top: -7%;
     font-weight: bold;
 }
-.video-foreground {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 600px;
-  }
-  
-  .video-foreground iframe {
-    width: 100%;
-    height: 100%;
-    pointer-events: none;
-  }
 
 
 @import url('https://fonts.googleapis.com/css?family=Mukta:700');
