--- a/src/app/components/pages/production-audiovisuelle/production-audiovisuelle.component.scss
+++ b/src/app/components/pages/production-audiovisuelle/production-audiovisuelle.component.scss
@@ -111,28 +111,26 @@
 .page-title-area{
     //background-image: url(../../../../assets/img/bg/rp.jpg);
     background-size: 100% 100%;
-    height: 520px;
+    height: 600px;
     width: 100%;
-    background-color:  rgb(17, 16, 16);
+    overflow: hidden;
     
     .page-title-content{
         margin-top: 30%;
     }
-
-    
+   
     h2{
         position: absolute;
         color: #f1f2f6;
-        margin-top: 50px;
+        margin-top: 250px;
         font-weight: 700;
        // font-size: 50px;
        text-align: center;
     }
     p{
         position: absolute;
-        font-size: 22.5px;
-        margin-top: 100px;
-        //margin-left: 95px;
+        font-size: 21px;
+        margin-top: 300px;
         text-align: center;
         color: rgb(221, 217, 217);
     }
