--- a/src/app/components/pages/production-audiovisuelle/production-audiovisuelle.component.html
+++ b/src/app/components/pages/production-audiovisuelle/production-audiovisuelle.component.html
@@ -1,6 +1,6 @@
 <app-header-style></app-header-style>
 
-<div style="background-color: rgb(17, 16, 16);">
+<div style="background-color:black; overflow: hidden;">
         <div class="page-title-area " data-jarallax='{"speed": 0.3}'>
             <div class="container">
                 <!-- <div class="page-title-content">
