--- a/src/app/components/pages/marketing-digital/marketing-digital.component.scss
+++ b/src/app/components/pages/marketing-digital/marketing-digital.component.scss
@@ -113,35 +113,47 @@
 .page-title-area{
     //background-image: url(../../../../assets/img/bg/rp.jpg);
     background-size: 100% 100%;
-    height: 520px;
+    height: 600px;
     width: 100%;
+    overflow: hidden;
     background-color:  rgb(17, 16, 16);
     .page-title-content{
         margin-top: 30%;
     }  
     h2{
-        text-align: center;
         position: absolute;
         color: #f1f2f6;
-        margin-top: 50px;
-        margin-left: 300px;
+        margin-top: 250px;
+        
         font-weight: 700;
        // font-size: 50px;
        
     }
     p{
         position: absolute;
-        font-size: 22.5px;
-        margin-top: 100px;
+        font-size: 20px;
+        margin-top: 300px;
         //margin-left: 95px;
-        text-align: center;
+       // text-align: center;
         color: rgb(221, 217, 217);
     }
 }
-
+.video-foreground {
+    scale: 2;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 400px;
+  } 
+.video-foreground iframe {
+    width: 100%;
+    height: 100%;
+    pointer-events: none;
+}
 .courses-details-image {
     border-radius: 5px;
-    margin-top: 70px;
+    margin-top: 0px;
     iframe {
         width: 100%;
         border-radius: 5px;
@@ -215,19 +227,7 @@
         }
     }
 }
-.video-foreground {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 600px;
-  }
-  
-  .video-foreground iframe {
-    width: 100%;
-    height: 100%;
-    pointer-events: none;
-  }
+
 @keyframes slidein {
     from {
       margin-left: -100%;
@@ -480,7 +480,7 @@ button {
 }
 .courses-sidebar-information {
     margin-bottom: 40px;
-    margin-top: 150px;
+    margin-top: 70px;
     ul {
         padding-left: 0;
         margin-bottom: 0;
