--- a/src/app/components/pages/home-page-one/homeone-main-banner/homeone-main-banner.component.scss
+++ b/src/app/components/pages/home-page-one/homeone-main-banner/homeone-main-banner.component.scss
@@ -102,6 +102,7 @@
     //margin-top: -10.5%;
     margin-top: -20px;
     margin-left: 2.8%;
+    overflow: hidden;
 }
 .head{
     margin-top: -105px;
@@ -154,7 +155,7 @@
 // }
 
 .bg{
-    
+   
     margin-top: 0px;
    // background-image: url("../../../../../assets/img/bg/webDesign.jpg");
     
