--- a/src/app/components/pages/home-page-one/home-page-one.component.html
+++ b/src/app/components/pages/home-page-one/home-page-one.component.html
@@ -4,7 +4,7 @@
 
 
 
-<div style="overflow-x: hidden;">
+<div style="overflow: hidden;">
 
     <div id="banner">
         <app-homeone-main-banner></app-homeone-main-banner>
