--- a/src/app/components/pages/développement-web/développement-web.component.html
+++ b/src/app/components/pages/développement-web/développement-web.component.html
@@ -1,6 +1,6 @@
 <app-header-style></app-header-style>
 
-<div style="background-color:  rgb(17, 16, 16);">
+<div style="background-color: black;">
     <div class="page-title-area jarallax" data-jarallax='{"speed": 0.3}'>
         <div class="container">
             <!-- <div class="page-title-content">
@@ -12,13 +12,13 @@
 
             <div id="video-background">
                 <div class="video-foreground">
-                    <iframe width="560" height="315" src="https://www.youtube.com/embed/iFoNg1LrdQg?playlist=iFoNg1LrdQg&loop=1&autoplay=1&controls=0&mute=1" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                    <iframe src="https://www.youtube.com/embed/eRkvJ71O2yc?zommIplaylist=eRkvJ71O2yc&loop=1&autoplay=1&controls=0&mute=1" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
                 </div>
             </div>
             <!-- ?playlist=6PXAXB-a_Zs&loop=1&autoplay=1&controls=0&mute=1 -->
             <h2>AGENCE DÉVELOPPEMENT WEB TUNISIE</h2>
                     
-            <p><strong>IBComProd</strong> spécialiste dans la création des sites web vitrines, e-commerce ou dynamique, <br> un développement sur mesure..</p>
+            <p><strong>IBComProd</strong> spécialiste dans la création des sites web vitrines, e-commerce ou dynamique, un développement sur mesure..</p>
 
         </div>
     </div>
