--- a/src/app/components/pages/développement-web/développement-web.component.html
+++ b/src/app/components/pages/développement-web/développement-web.component.html
@@ -1,6 +1,6 @@
 <app-header-style></app-header-style>
 
-<div style="background-color: black;">
+<div style="background-color: black; overflow: hidden;">
     <div class="page-title-area jarallax" data-jarallax='{"speed": 0.3}'>
         <div class="container">
             <!-- <div class="page-title-content">
