--- a/src/app/components/pages/design-graphique/design-graphique.component.html
+++ b/src/app/components/pages/design-graphique/design-graphique.component.html
@@ -1,6 +1,7 @@
-<app-header-style></app-header-style>
-
-<div style="background-color: black">
+<div class="header">
+    <app-header-style></app-header-style>
+</div>
+<div style="background-color: black; overflow: hidden;">
     <div class="page-title-area jarallax" data-jarallax='{"speed": 0.3}'>
         <div class="container">
             <!-- <div class="page-title-content">
@@ -13,7 +14,7 @@
             
             <div id="video-background">
                 <div class="video-foreground">
-                    <iframe src="https://www.youtube.com/embed/eoEbzpO7X5M?zommIplaylist=eoEbzpO7X5M&loop=1&autoplay=1&controls=0&mute=1" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                    <iframe src="https://www.youtube.com/embed/IaT4DneyKLc?zommIplaylist=IaT4DneyKLc&loop=1&autoplay=1&controls=0&mute=1" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
                 </div>
             </div>
 
