--- a/src/app/components/pages/design-graphique/design-graphique.component.scss
+++ b/src/app/components/pages/design-graphique/design-graphique.component.scss
@@ -127,7 +127,7 @@
 .page-title-area{
    // background-image: url(../../../../assets/img/bg/design.jpg);
     background-size: 100% 100%;
-    height: 520px;
+    height: 620px;
     width: 100%;
     background-color:  rgb(17, 16, 16);
     overflow: hidden;
@@ -135,7 +135,7 @@
     h2{
         position: absolute;
         color: #f1f2f6;
-        margin-top: 50px;
+        margin-top: 300px;
         font-weight: 700;
        // font-size: 50px;
        text-align: center;
@@ -143,7 +143,7 @@
     p{
         position: absolute;
         font-size: 22.5px;
-        margin-top: 100px;
+        margin-top: 350px;
         //margin-left: 95px;
         text-align: center;
         color: rgb(221, 217, 217);
@@ -159,6 +159,7 @@
     left: 0;
     width: 100%;
     height: 630px;
+    scale: 2;
   }
   
 .video-foreground iframe {
@@ -170,7 +171,7 @@
   .courses-details-image {
     border-radius: 5px;
     margin-bottom: 20px;
-    margin-top: 150px;
+    margin-top: 0px;
     iframe {
         width: 100%;
         border-radius: 5px;
@@ -312,7 +313,7 @@
 }
 .courses-sidebar-information {
     margin-bottom: 35px;
-    margin-top: 200px;
+    margin-top: 50px;
     width: 120%;
     ul {
         padding-left: 0;
