--- a/src/app/components/pages/clients/clients.component.html
+++ b/src/app/components/pages/clients/clients.component.html
@@ -30,7 +30,8 @@
 
 <!-- <h3>Plus de 400 clients, Grands comptes, ETI, PME et Start-up nous font confiance:</h3> -->
 
-<div class="slides">
+<!-- first -->
+<!-- <div class="slides">
   <abbr class='client' title="Arab Tunisian Bank"><img src="../../../../assets/img/clients/ATB.png" alt="Arab Tunisian Bank"></abbr>
   <abbr class='client' title="TotalEnergies "><img src="../../../../assets/img/clients/TE-IbComProd.png" alt="TotalEnergies"></abbr>
   <abbr class='client' class='client' title="Magasin Général"><img src="../../../../assets/img/clients/MG-IbComProd.png" alt="Magasin Général"></abbr>
@@ -39,7 +40,47 @@
   <abbr class='client' title="Nouvelair"><img src="../../../../assets/img/clients/NA-IbComProd.png" alt="Nouvelair"></abbr>
   <abbr class='client' title="Peugeot"><img src="../../../../assets/img/clients/PEUGEOT-IbComProd.png" alt="Peugeot"></abbr>
   <abbr class='client' title="Qatar National Bank"><img src="../../../../assets/img/clients/QNB-IbComProd.png" alt="Qatar National Bank"></abbr>
+</div> -->
+
+<!-- second -->
+<div class="liste">
+  <div class="cadre">
+    <img src="../../../../assets/img/clients/ATB.png" alt="Arab Tunisian Bank">
+    <span class="titre">Arab Tunisian Bank</span>
+  </div>
+
+  <div class="cadre">
+    <img src="../../../../assets/img/clients/TE-IbComProd.png" alt="TotalEnergies">
+    <span class="titre">TotalEnergies</span>
+  </div>
+
+  <div class="cadre">
+    <img src="../../../../assets/img/clients/MG-IbComProd.png" alt="Magasin Général">
+    <span class="titre">Magasin Général</span>
+  </div>
+
+  <div class="cadre">
+    <img src="../../../../assets/img/clients/OOREDOO-IbComProd.png" alt="OOREDOO">
+    <span class="titre">OOREDOO</span>
+  </div>
+
+  <div class="cadre">
+    <img src="../../../../assets/img/clients/UC-IbComProd.png" alt="Université Centrale">
+    <span class="titre">Université Centrale</span>
+  </div>
+
+  <div class="cadre">
+    <img src="../../../../assets/img/clients/PEUGEOT-IbComProd.png" alt="Peugeot">
+    <span class="titre">Peugeot</span>
+  </div>
+
+  <div class="cadre">
+    <img src="../../../../assets/img/clients/QNB-IbComProd.png" alt="Qatar National Bank">
+    <span class="titre">Qatar National Bank</span>
+  </div>
+
 </div>
+
 
 
 <!-- <ul id="c"> 
