--- a/src/app/components/pages/production-audiovisuelle/production-audiovisuelle.component.scss
+++ b/src/app/components/pages/production-audiovisuelle/production-audiovisuelle.component.scss
@@ -111,9 +111,13 @@
 .page-title-area{
     //background-image: url(../../../../assets/img/bg/rp.jpg);
     background-size: 100% 100%;
-    height: 600px;
-    width: 100%;
+    height: 615px;
+    width: 99.9%;
     overflow: hidden;
+    border-style:inset;
+    border-color: #ffffff;
+    margin-top: 1px;
+    
     
     .page-title-content{
         margin-top: 30%;
@@ -136,11 +140,13 @@
     }
 }
 .video-foreground {
+    margin-top: -5px;
     position: absolute;
     top: 0;
     left: 0;
     width: 100%;
     height: 620px;
+    scale: 1.1;
   }
   
   .video-foreground iframe {
