--- a/src/app/components/pages/relations-presse-et-publiques/relations-presse-et-publiques.component.html
+++ b/src/app/components/pages/relations-presse-et-publiques/relations-presse-et-publiques.component.html
@@ -28,7 +28,7 @@
         <span class="circle" aria-hidden="true">
             <span class="icon arrow"></span>
         </span>
-        <span class="button-text"> voir Galerie</span>
+        <span class="button-text">Galerie</span>
         </button>
     </div>
     <section class="courses-details-area pt-100 pb-70">
