--- a/src/app/components/pages/production-audiovisuelle/production-audiovisuelle.component.html
+++ b/src/app/components/pages/production-audiovisuelle/production-audiovisuelle.component.html
@@ -29,7 +29,7 @@
             <span class="circle" aria-hidden="true">
                 <span class="icon arrow"></span>
             </span>
-            <span class="button-text"> voir Galerie</span>
+            <span class="button-text">Galerie</span>
             </button>
         </div>
 
