--- a/src/app/components/pages/événementiel/événementiel.component.html
+++ b/src/app/components/pages/événementiel/événementiel.component.html
@@ -1,6 +1,6 @@
 
 <app-header-style></app-header-style>
-<div style="background-color:black;">
+<div style="background-color:black; overflow: hidden;">
         <div class="page-title-area  jarallax" data-jarallax='{"speed": 0.3}'>
             <div class="container">
                 <!-- <div class="page-title-content">
@@ -22,13 +22,13 @@
                 <p><strong>IBComProd</strong> spécialiste dans la création d’événements qui reflètent le goût de chaque client..</p>
             </div>
         </div>
-        <div style="overflow-x: hidden;">
+        <div>
         <div id="container" class="galeryBtn">
             <button class="learn-more" routerLink="/galerie">
             <span class="circle" aria-hidden="true">
                 <span class="icon arrow"></span>
             </span>
-            <span class="button-text"> voir Galerie</span>
+            <span class="button-text">Galerie</span>
             </button>
         </div>
 
