--- a/src/app/components/pages/marketing-digital/marketing-digital.component.html
+++ b/src/app/components/pages/marketing-digital/marketing-digital.component.html
@@ -27,7 +27,7 @@
         <span class="circle" aria-hidden="true">
             <span class="icon arrow"></span>
         </span>
-        <span class="button-text"> voir Galerie</span>
+        <span class="button-text">Galerie</span>
         </button>
     </div>
 
