--- a/src/app/components/common/common-elements/common-elements.component.scss
+++ b/src/app/components/common/common-elements/common-elements.component.scss
@@ -62,7 +62,7 @@ margin-bottom: 0%
 
 $bg: #f3f8fa;
 $white: #fff;
-$black: #282936;
+$black: #6f6f71;
 
 @mixin transition($property: all, $duration: 0.45s, $ease: cubic-bezier(0.65,0,.076,1)) {
 transition: $property $duration $ease;
