--- a/src/app/components/pages/marketing-digital/marketing-digital.component.html
+++ b/src/app/components/pages/marketing-digital/marketing-digital.component.html
@@ -1,6 +1,6 @@
 <app-header-style></app-header-style>
 
-<div style="background-color:black;">
+<div style="background-color:black; overflow: hidden;">
     <div class="page-title-area jarallax" data-jarallax='{"speed": 0.3}'>
         <div class="container" >
             <!-- <div class="page-title-content">
@@ -129,7 +129,7 @@
                                 <div>
                                     <li>
                                         <span>
-                                        <i class='bx bx-check'></i>
+                                            <i class='bx bx-check'></i>
                                              Nombre de réseaux sociaux gérés 2
                                         </span>
                                     </li>
@@ -362,14 +362,17 @@
                                     </span>
                                 </li>
                                 </div>
+                            
                                 <div>
                                 <li>
                                     <span>
                                         <i class='bx bx-check'></i>
                                         10 Mots clés
                                     </span>
-                            </li></div>
-                            <div>
+                                </li>
+                            </div>
+                            
+                            <div>                              
                             <li>
                                     <span>
                                         <i class='bx bx-check'></i>
