--- a/src/app/components/pages/marketing-digital/marketing-digital.component.scss
+++ b/src/app/components/pages/marketing-digital/marketing-digital.component.scss
@@ -113,7 +113,7 @@
 .page-title-area{
     //background-image: url(../../../../assets/img/bg/rp.jpg);
     background-size: 100% 100%;
-    height: 600px;
+    height: 615px;
     width: 100%;
     overflow: hidden;
     background-color:  rgb(17, 16, 16);
@@ -144,7 +144,7 @@
     top: 0;
     left: 0;
     width: 100%;
-    height: 400px;
+    height: 415px;
   } 
 .video-foreground iframe {
     width: 100%;
@@ -153,7 +153,7 @@
 }
 .courses-details-image {
     border-radius: 5px;
-    margin-top: 0px;
+    margin-top: -35px;
     iframe {
         width: 100%;
         border-radius: 5px;
@@ -161,6 +161,7 @@
 }
 .courses-details-desc1 {
     margin-top: -50px;
+    
     width: 70%;
     margin-bottom: 10%;
     margin-left: -50px;
@@ -204,7 +205,7 @@
     }
     
     p {      
-        color: #999595
+        color: #999595;
         
     }
     span{
@@ -267,11 +268,17 @@
 }
 
 .courses-content{
+    
+    padding-left: 10px;
+
     div{       
-        color: white;       
+        color: white; 
+        font-size: 15px;      
     }
     h3{
-        color: white;
+        margin-left: 15px;
+        color: #999595;
+        font-size: 22.5px;
     }
     .why-you-learn{
         ul{
@@ -282,9 +289,10 @@
             }
         }
     }
-    
-   
-    
+    .course-author{
+        color: #999595;
+        margin-left: 20px;
+    }
 }
 .galeryBtn{
     button{
@@ -295,7 +303,7 @@
         color: white;
     }
     width: 5%;
-    position: sticky;
+    position: static;
     top: 70%;
     margin-left: 85.7%;
     display: block;
@@ -342,7 +350,7 @@
   .shorting{
     margin-top: -5%;
     #packs{
-        color:rgb(17, 16, 16);
+        color:rgb(255, 255, 255);
     }
     
   }
@@ -555,6 +563,7 @@ button {
         };
     }
     h4 {
+      
         margin-bottom: 15px;
         font: {
             weight: 600;
@@ -985,7 +994,8 @@ button {
             font-size: 18px;
         }
         .why-you-learn {
-            
+           
+
             ul {
                 
                 li {
@@ -996,6 +1006,7 @@ button {
                         i {
                             top: 0;
                         }
+                        color: #999595;
                     }
                 }
             }
@@ -1116,6 +1127,7 @@ button {
 }
 
 .contact-form {
+    //margin-top: 20px;
     background-color: rgb(17, 16, 16);
     box-shadow: 0px 8px 16px 0px rgba(146, 184, 255, 0.2);
     border-radius: 5px;
@@ -1129,7 +1141,7 @@ button {
     };
 }
 #contactForm {
-    margin-top: -5%;
+    
     .form-group {
         .form-control {
             height: 50px;
@@ -1246,9 +1258,10 @@ button {
 @media only screen and (min-width: 1200px) and (max-width: 1275px) {
 
 }
+
 .courses-details-desc {
     margin-top: 35px;
-
+    margin-right: 5px;
     h3 {
         margin-bottom: 15px;
         font: {
@@ -1273,6 +1286,7 @@ button {
                 bottom: -12px;
             };
             li {
+                
                 flex: 0 0 0;
                 max-width: 100%;
                 padding: {
@@ -1282,7 +1296,7 @@ button {
                 };
                 span {
                     display: block;
-                    color: var(--blackColor);
+                    color: #999595;
                     position: relative;
                     padding-left: 28px;
                     line-height: 1.7;
