--- a/src/app/components/pages/production-audiovisuelle/production-audiovisuelle.component.scss
+++ b/src/app/components/pages/production-audiovisuelle/production-audiovisuelle.component.scss
@@ -113,9 +113,9 @@
     background-size: 100% 100%;
     height: 615px;
     width: 99.9%;
-    overflow: hidden;
-    border-style:inset;
-    border-color: #ffffff;
+    // overflow: hidden;
+    // border-style:inset;
+    // border-color: #ffffff;
     margin-top: 1px;
     
     
@@ -153,6 +153,10 @@
     width: 100%;
     height: 100%;
     pointer-events: none;
+  }
+
+  .courses-details-area{
+    margin-top: -120px;
   }
 .container-fluid::before{
     background-color: transparent;
